# weatherapp

./: .cache.sqlite  .gitignore  README.md  release.sh  run_hermes.sh
agent_control/: AGENT.md  AGENTS.md  ARCHITECTURE.md  CHECKLIST.md  CONSTRAINTS.md  CURRENT_TASK.md  PLAN.md  PROJECT.md  ROADMAP.md  RUN_AGENT.md  STATE.md  V0_TASK.md  V10_TASK.md  V11_TASK.md  V12_TASK.md  V20_TASK.md  V21_TASK.md  V22_TASK.md  V30_TASK.md  V40_TASK.md  V41_TASK.md  V42_TASK.md  V43_TASK.md  V50_TASK.md  V512_TASK.md  V513_TASK.md  V52_TASK.md  V55_TASK.md  V57_TASK.md
app/: README.md  pyproject.toml
app/src/weatherapp/data/: get_weather_data.py
app/src/weatherapp/format/: show_weather.py
app/src/weatherapp/gui/: __init__.py  main_window.py  worker.py
src/weatherapp/: __init__.py  app.py  config_manager.py
src/weatherapp/data/: __init__.py  get_weather_data.py
src/weatherapp/format/: __init__.py  show_weather.py
src/weatherapp/gui/: main_window.py  worker.py
src/weatherapp/utils/: __init__.py  download_icons.sh  weather_code_mapper.py
