[project]
name = "weatherapp"
version = "0.1.0"
description = "A lightweight PyQt6 GUI weather application."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Quantiux", email = "roy@quantiux.com" }]
dependencies = [
  "openmeteo-requests (>=1.7.4,<2.0.0)",
  "pandas (>=2.3.3,<3.0.0)",
  "pyqt6 (>=6.10.0,<7.0.0)",
  "requests-cache (>=1.2.1,<2.0.0)",
  "retry-requests (>=2.0.0,<3.0.0)"
]

[dependency-groups]
dev = [
  "pytest-qt (>=4.5.0,<5.0.0)",
  "pytest (>=9.0.1,<10.0.0)",
  "ruff (>=0.14.10,<0.15.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "weatherapp", from = "src" }]
